infrastructure/redirects/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tm28-redirect-ingress
  namespace: redirects
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 $scheme://tobiasmichael.de$request_uri;
spec:
  tls:
    - hosts:
        - tm28.de
      secretName: tm28-redirect-tls
  rules:
    - host: tm28.de
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmem-redirect-ingress
  namespace: redirects
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      return 301 $scheme://tobiasmichael.de$request_uri;
spec:
  tls:
    - hosts:
        - tmem.de
      secretName: tmem-redirect-tls
  rules:
    - host: tmem.de
